--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Reparación de motor</div>
-                                <div class="portfolio-caption-subheading text-muted">Rectificadora</div>
+                                <div class="portfolio-caption-heading">Diagnóstico de motor</div>
+                                <div class="portfolio-caption-subheading text-muted">Fallas y Ruidos</div>
                             </div>
                         </div>
                     </div>
@@ -357,8 +357,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Reparación de motor</h2>
-                                    <p class="item-intro text-muted">Rectificadora.</p>
+                                    <h2 class="text-uppercase">Diagnóstico de motor</h2>
+                                    <p class="item-intro text-muted">Fallas y Ruidos.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpeg" alt="..." />
                                       <table class="default">
 <p><tr><td align="left"><li>Humo azul por el tubo de escape</li></td></tr>
