Se configura la conexion con el back y generar el pdf

--- a/index.html
+++ b/index.html
@@ -282,10 +282,11 @@
                                 <div class="modal-body text-center">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Historial</h2>								
-                                      <form>
+                                      <form id="formConsultar">
                                             <div class="mb-3">
                                                 <label for="placa" class="form-label">Ingrese la placa de su vehículo</label>
                                                 <input type="text" class="form-control" id="placa" aria-describedby="placa">                                                
+                                                <span id="error" class="text-danger"></span>
                                             </div>
                                             <button type="submit" class="btn btn-primary">Consultar</button>
                                       </form>                                    
