--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Flavio Roldan | Envigado | Rogacar</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://santiagoroldan00.github.io/rogacarimg.github.io/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">     
-            <a class="navbar-brand" href="#page-top"><img src="assets/img/rogacar-1.png" alt="..." /></a>
+            <a class="navbar-brand" href="#page-top"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/rogacar-1.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -99,7 +99,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.png" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/11.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Problemas mecánicos</div>
@@ -114,7 +114,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.png" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/2.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Problemas eléctricos</div>
@@ -129,7 +129,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/3.jpeg" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/3.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Diagnóstico de motor</div>
@@ -144,7 +144,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.png" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/4.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Reparación embragues</div>
@@ -159,7 +159,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.png" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/5.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Reparación de frenos</div>
@@ -174,7 +174,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/6.png" alt="..." />
+                                <img class="img-fluid" src="https://santiagoroldan00.github.io/rogacarimg.github.io/6.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Cambio de Aceite</div>
@@ -223,7 +223,7 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/rogacar/?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram" ></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">					
-						Copyright &copy; Rogacar 2021					
+						Copyright &copy; Rogacar <span id="year"></span>					
 						
                         <!--<a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>-->
@@ -236,7 +236,7 @@
         <div class="portfolio-modal modal fade" id="Contactenos" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -302,7 +302,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -310,7 +310,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Problemas mecánicos</h2>
                                     <p class="item-intro text-muted">motor.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/11.png" alt="..." />
                            
                                   <table class="default">
                                         <p>
@@ -338,7 +338,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -346,7 +346,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Problemas electricos</h2>
                                     <p class="item-intro text-muted">voltajes</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/2.png" alt="..." />
                                     <table class="default">
                                         <p><tr><td align="left"><li>Bajos voltajes en Baterías</li></td></tr>
                                         <tr><td align="left"><li>Deficiencias en el sistema de inyección</li></td></tr>
@@ -369,7 +369,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -377,7 +377,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Diagnóstico de motor</h2>
                                     <p class="item-intro text-muted">Fallas y Ruidos.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpeg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/3.jpeg" alt="..." />
                                       <table class="default">
                                         <p><tr><td align="left"><li>Humo azul por el tubo de escape</li></td></tr>
                                         <tr><td align="left"><li>Consumo excesivo de aceite o gasolina</li></td></tr>
@@ -399,7 +399,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -407,7 +407,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Reparación de embragues</h2>
                                     <p class="item-intro text-muted">Kit de clutch.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/4.png" alt="..." />
                                      <table class="default">
                                         <p><tr><td align="left"><li>Deslizamiento</li></td></tr>
                                         <tr><td align="left"><li>Olor a quemado</li></td></tr>
@@ -428,7 +428,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -436,7 +436,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Reparación de frenos</h2>
                                     <p class="item-intro text-muted">Campanas de frenos</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/5.png" alt="..." />
                                      <table class="default">
                                         <p><tr><td align="left"><li>Pedal demasiado duro</li></td></tr>
                                         <tr><td align="left"><li>Pedal bajo</li></td></tr>
@@ -460,7 +460,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="https://santiagoroldan00.github.io/rogacarimg.github.io/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
@@ -468,7 +468,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Cambios de aceite</h2>
                                     <p class="item-intro text-muted">Sintético.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="https://santiagoroldan00.github.io/rogacarimg.github.io/6.png" alt="..." />
                                      <table class="default">
                                         <p><tr><td align="left"><li>tipo de aceite lleva el carro</li></td></tr>
                                         <tr><td align="left"><li>Seguir expecificaciones del manueal</li></td></tr>
@@ -485,6 +485,9 @@
                 </div>
             </div>
         </div>
+        <script>
+            document.getElementById('year').innerText = new Date().getFullYear();
+        </script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
